<resources>
    <string name="app_name">Higher or Lower</string>
    <string name="lower">LOWER</string>
    <string name="or">OR</string>
    <string name="higher">HIGHER</string>
    <string name="start">START</string>
    <string name="population">population</string>
    <string name="please_wait">Please wait…</string>
    <string name="score">Score:</string>
    <string name="_0">0</string>
    <string name="result">Result</string>
    <string name="exit">Exit</string>
    <string name="try_again">Try again</string>
    <string name="category">CATEGORY</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="name">name</string>
    <string name="no_players_to_display">No players to display</string>
    <string name="rank">RANK</string>
    <string name="name_L">NAME</string>
    <string name="points">POINTS</string>
</resources>