<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bgColor"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold" />


        <TextView
            android:id="@+id/tvResultScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="You scored 102 points"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/orange"
            android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btnTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            android:layout_weight="1"
            android:layout_marginStart="10dp"/>
    </LinearLayout>


</LinearLayout>