<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bgColor"
    android:padding="15dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHigher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/higher"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivArrowUp"
            android:layout_width="60dp"
            android:layout_height="60sp"
            android:src="@drawable/arrow_up"
            app:layout_constraintBottom_toBottomOf="@+id/tvHigher"
            app:layout_constraintStart_toEndOf="@+id/tvHigher"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tvOR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/blue"
        android:textSize="60sp"
        android:textStyle="bold"
        android:layout_marginTop="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl2"
        android:layout_marginTop="-10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOR">

        <ImageView
            android:id="@+id/ivArrowDown"
            android:layout_width="60dp"
            android:layout_height="60sp"
            android:src="@drawable/arrow_down"
            app:layout_constraintBottom_toBottomOf="@+id/tvLower"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvLower" />

        <TextView
            android:id="@+id/tvLower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lower"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivArrowDown"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/flStart"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/circle_button_ripple_background"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />
    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>