<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:background="@color/bgColor"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/tvScoreNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/bgColor"
        tools:text="100"
        android:text="@string/_0"
        android:layout_marginEnd="10dp"
        android:textColor="@color/orange"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/bgColor"
        android:text="@string/score"
        android:textColor="@color/orange"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/tvScoreNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/flOR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ivImageUp"
            android:layout_width="200dp"
            android:layout_height="140dp"
            tools:src="@drawable/ff"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvNameUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:text="Name" />

        <TextView
            android:id="@+id/tvPopulationNumberUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:text="1,700,000"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvPopulationUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/population"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/flOR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"
        tools:visibility="visible">

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/bgColor"
            android:padding="15dp"
            android:text="@string/or"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/llDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flOR">

        <ImageView
            android:id="@+id/ivImageDown"
            android:layout_width="200dp"
            android:layout_height="140dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flOR"
            tools:src="@drawable/ff"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvNameDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvPopulationNumberDown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivImageDown"
            tools:text="Name"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvPopulationNumberDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/tvNameDown"
            app:layout_constraintStart_toStartOf="@+id/tvNameDown"
            app:layout_constraintTop_toBottomOf="@+id/tvNameDown"
            tools:text="1,700,000"
            tools:visibility="visible"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvPopulationDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/population"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPopulationNumberDown"
            tools:visibility="visible"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDuplicate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flOR">

        <ImageView
            android:id="@+id/ivImageDuplicate"
            android:layout_width="200dp"
            android:layout_height="140dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flOR"
            tools:src="@drawable/ff"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvNameDuplicate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvPopulationNumberDown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivImageDown"
            tools:text="Name"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvPopulationNumberDuplicate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/tvNameDown"
            app:layout_constraintStart_toStartOf="@+id/tvNameDown"
            app:layout_constraintTop_toBottomOf="@+id/tvNameDown"
            tools:text="1,700,000"
            tools:visibility="visible"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvPopulationDuplicate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/population"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPopulationNumberDown"
            tools:visibility="visible"
            android:layout_gravity="center"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>